--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Act-ts</title>
+  <title>Hujanen, Niko Petteri - CV (built with act-ts)</title>
+  <link rel="preconnect" href="https://fonts.bunny.net">
+  <link href="https://fonts.bunny.net/css?family=inter:400,500,600|passion-one:700" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <style>
+    :root {
+      --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+          'Segoe UI Symbol', 'Noto Color Emoji';
+      --font-display: 'Passion One', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+          'Segoe UI Symbol', 'Noto Color Emoji';
+    }
+  </style>
 </head>
 
-<body class="bg-gray-200 font-sans antialiased">
+<body class="bg-gray-200 font-sans antialiased scroll-smooth">
   <div id="app"></div>
   <script type="module" src="./src/main.ts"></script>
 </body>
